# adb_gui_installer

./: .gitignore  adb_gui_installer.spec  build_app.py  build_mac.spec  build_windows.spec  main.py  pyproject.toml  read_me.txt  requirements.txt
services/: adb_service.py
ui/: main_window.py
utils/: app_config.json  config_manager.py  logger.py  tool_finder.py
workers/: __init__.py
