[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adb-gui-installer"
version = "1.0.0"
description = "A GUI tool for managing ADB devices and installing APKs"
readme = "read_me.txt"
license = {text = "MIT"}
authors = [
    {name = "ArephUcil", email = ""}
]
keywords = ["adb", "android", "installer", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
]

[project.urls]
Repository = "https://github.com/ArephUcil/adb_gui_installer"
